--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1535,7 +1535,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-qSAnWRBvJ2 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2146,7 +2146,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-qSAnWRBvJ2 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
